# tin

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: config.yml  propose_design_idea.md
.github/workflows/: cargo.yml  ci.yml
examples/: basic.sn  basic.tin
libraries/tinfoil/: Cargo.toml
libraries/tinhir/: Cargo.toml
libraries/tinhir/src/: error.rs  hir.rs  lib.rs  parse.rs
libraries/tintypeck/: Cargo.toml
src/: error.rs  hir.rs  io.rs  main.rs  parse.rs
tools/foilvm/: Cargo.toml
tools/tinc/: Cargo.toml
tools/tinc/examples/: basic.sn
tools/tinc/src/: main.rs
tools/tinenv/: Cargo.toml
tools/tinfmt/: Cargo.toml
tools/tint/: Cargo.toml
